--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  auto_route: ^7.7.0
+  dio: ^5.2.1+1
+  equatable: ^2.0.5
+  retrofit: ^4.0.1
+  flutter_bloc: ^8.1.3
+  flutter_hooks: ^0.19.0
+  ionicons: ^0.2.2
+  get_it: ^7.6.0
+  awesome_dio_interceptor: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +56,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.2
+  build_runner: ^2.4.6
+  auto_route_generator: ^7.2.0
+  retrofit_generator: ^7.0.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
